fix home nav alignment issue for responsive resizing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17949,7 +17949,7 @@ Navigation
 
     .f-header__nav-logo-wrapper {
         display: flex;
-        padding-right: 130px
+        padding-right: 109px
     }
 
     .f-header__nav-grid,
